# doremi

./: .gitignore  Cargo.toml  README.md
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/android/doremi/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/app/doremi/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/android/doremi/: CoreLib.kt  JsonSerde.kt  MainActivity.kt  TestData.kt
android/app/src/main/java/android/doremi/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/app/doremi/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/android/doremi/: ExampleUnitTest.kt
android/app/src/test/java/app/doremi/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cli/: Cargo.toml
cli/src/: main.rs
doremi_core/: Cargo.toml
doremi_core/src/: google.rs  lib.rs  main.rs  storage.rs  sync.rs
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/src/: android.rs  google.rs  lib.rs  storage.rs
