[package]
name = "doremi_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
date-rs = { version = "1.6.0", default-features = false }
datetime-rs = { version = "1.11.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
env_logger = { version = "0.11.8", default-features = false }
url = { version = "2.5.8", default-features = false }
webbrowser = { version = "1.1.0", default-features = false }
form_urlencoded = { version = "1.2.2", default-features = false }
ureq = { version = "3.2.0", features = ["json"] }
log = "0.4.29"
clap = { version = "4.5.58", features = ["derive"] }
rand = { version = "0.10.0", default-features = false, features = ["thread_rng"] }
